# cusf_predictor_wrapper

./: Predictor.py  README.md  get_wind_data.py  pyproject.toml  requirements.txt  setup.py  wind_grabber.sh
apps/: basic_example.py  get_wind_data.py  meppen_predict.py  predict.py  sonde_predict.py  sonde_predict.sh  wind_grabber.sh
apps/grib/: grib_downloader.py
apps/web/: index.html
cusfpredict/: __init__.py  gfs.py  predict.py  reader.py  utils.py
src/: pred.c  run_model.c
