[tool.poetry]
name = "cusfpredict"
version = "0.2.1"
description = "CUSF Predictor Wrapper & GFS Downloader"
authors = ["Mark Jessop"]

[tool.poetry.dependencies]
python = "^3.10"
fastkml = "^1.1.0"
requests = "^2.25.1"
numpy = "^2.2.3"
pytz = "^2025.1"
shapely = "^2.0.7"
python-dateutil = "^2.8.1"
xarray = "^2025.1.2"
cfgrib = "^0.9.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
