[tool.poetry]
name = "cusfpredict"
version = "0.2.1"
description = "CUSF Predictor Wrapper & GFS Downloader"
authors = ["Mark Jessop"]

[tool.poetry.dependencies]
python = "^3.9"            # last actively maintained version of Python
fastkml = "^1"
requests = "^2.25.1"
numpy = "^2.0.0"
pytz = "^2025.1"
shapely = "^2.0.0"
python-dateutil = "^2.8.1"
xarray = "*"
cfgrib = "^0.9.8"

[build-system]
requires = ["setuptools", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
